--- a/css/main.css
+++ b/css/main.css
@@ -1167,8 +1167,19 @@ section#contact {
 
 
 @media (max-width:992px) {
-	
 
+.col-sm-5.animation.stretchRight.slideUp {
+		  display: table;
+}
+.col-xs-7.home_mobile.animation.bigEntrance.slideUp {
+	width:100%;
+		  display: table;
+  height: 450px;
+}
+	div#carousel-example-generic {
+		position: absolute;
+		top: 0px;
+	}
 	.cuttoff-slider {
   background: url(../img/iphone-wide.png) no-repeat;
   width: 100%;
