--- a/css/main.css
+++ b/css/main.css
@@ -1125,7 +1125,7 @@ blockquote.col-md-12.center-block {
   border-left-color: #fff;
   border-width: 10px;
   left: 10%;
-}*/
+}------------------------------------------------------------------------------------*/
 
 
 
@@ -1179,9 +1179,7 @@ section#contact {
 
 
 @media (max-width:992px) {
-	body, html {
-  overflow-x: hidden!important;
-}
+
 	.navbar-fixed-top, .navbar-fixed-bottom {
 
   /*width: 95.3%!important;*/
