--- a/css/mohafez-css.css
+++ b/css/mohafez-css.css
@@ -1,4 +1,4 @@
-﻿.slider-app1{
+.slider-app1{
     border: 2px solid #2B1E15;
 width: 170px;
 text-align: left;
@@ -260,4 +260,104 @@ div#carousel-example-generic {
   height: 8.1em;
   width: 97%;
 }
+}
+
+
+    .video-conatiner {
+    float: right;
+    padding: 46px 0 0;
+    width: 100%;
+}
+
+.video-image {
+    background-color: #aaa;
+    border: 5px solid #fff;
+    float: right;
+    height: 95px;
+    position: relative;
+    width: 160px;
+}
+.video-image span {
+    background-color: rgba(0, 0, 0, 0.5);
+    display: block;
+    height: 100%;
+    position: relative;
+    text-align: center;
+    width: 100%;
+}
+
+.video-image img {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.video-image span i {
+    font-size: 26px;
+        color: #ffffff;
+    left: 50%;
+    margin: -14px 0 0 -13px;
+    position: absolute;
+    top: 50%;
+}
+
+.video-text {
+    float: right;
+    margin: 24px 10px 0 0;
+    font-weight: 700;
+    line-height: 23px;
+    font-size: 14px;
+    width: 254px;
+}
+
+.modal.in .modal-dialog {
+    z-index: 2050;
+}
+
+.modal-content {
+    border-radius: 0px;
+}
+
+.modal-body {
+    padding: 6px;
+}
+.carousel-control {
+    /* display: none; */
+    position: absolute;
+    top: 608px;
+    bottom: 0;
+}
+
+#carousel-example-generic {
+    padding: 50px 0;
+}
+
+.header {
+    height: 630px;
+}
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.modal-backdrop.in {
+    filter: alpha(opacity=85);
+    opacity: .85;
+}
+@media (min-width: 768px){
+  .modal-dialog {
+    min-width: 775px;
+        margin: 90px auto;
+}  
 }
