--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -98,6 +98,9 @@
   }
 }
 @include media("<=992px") {
+  .btn-style {
+    min-width: 100px;
+  }
   .modal {
     margin: 0 !important;
     .modal-body {
@@ -114,7 +117,9 @@
     .container {
       .opener-holder {
         display: inline-block;
-        padding: 0 25px 0 0;
+        // padding: 0 25px 0 0;
+        position: relative;
+        top: 10px;
         .nav-opener {
           position: relative;
           float: left;
