--- a/assets/css/all.scss
+++ b/assets/css/all.scss
@@ -6,7 +6,10 @@
   font-style: normal;
   font-weight: 400;
   src: url(../fonts/droidkufi/DroidKufi-Regular.eot);
-  src: url(../fonts/droidkufi/DroidKufi-Regular.eot?#iefix) format("embedded-opentype"), url(../fonts/droidkufi/DroidKufi-Regular.woff2) format("woff2"), url(../fonts/droidkufi/DroidKufi-Regular.woff) format("woff"),
+  src:
+    url(../fonts/droidkufi/DroidKufi-Regular.eot?#iefix) format("embedded-opentype"),
+    url(../fonts/droidkufi/DroidKufi-Regular.woff2) format("woff2"),
+    url(../fonts/droidkufi/DroidKufi-Regular.woff) format("woff"),
     url(../fonts/droidkufi/DroidKufi-Regular.ttf) format("truetype");
 }
 @font-face {
@@ -14,7 +17,10 @@
   font-style: normal;
   font-weight: 600;
   src: url(../fonts/droidkufi/DroidKufi-Bold.eot);
-  src: url(../fonts/droidkufi/DroidKufi-Bold.eot?#iefix) format("embedded-opentype"), url(../fonts/droidkufi/DroidKufi-Bold.woff2) format("woff2"), url(../fonts/droidkufi/DroidKufi-Bold.woff) format("woff"),
+  src:
+    url(../fonts/droidkufi/DroidKufi-Bold.eot?#iefix) format("embedded-opentype"),
+    url(../fonts/droidkufi/DroidKufi-Bold.woff2) format("woff2"),
+    url(../fonts/droidkufi/DroidKufi-Bold.woff) format("woff"),
     url(../fonts/droidkufi/DroidKufi-Bold.ttf) format("truetype");
 }
 
@@ -139,3 +145,247 @@ a {
 @import "_header";
 @import "_main";
 @import "_footer";
+
+// =======================
+// Donate page
+// =======================
+/* Timeline Styling */
+.timeline-container {
+  position: relative;
+  padding: 3rem 0;
+}
+
+.timeline {
+  position: relative;
+  margin: 0 auto;
+}
+
+.timeline::after {
+  content: "";
+  position: absolute;
+  width: 6px;
+  background-color: #e0e0e0;
+  top: 0;
+  bottom: 0;
+  right: 50%;
+  margin-right: -3px;
+  border-radius: 10px;
+  z-index: -2;
+}
+
+.timeline-step {
+  position: relative;
+  margin-bottom: 100px;
+}
+
+.timeline-step:last-child {
+  margin-bottom: 0;
+}
+
+.timeline-content-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.timeline-content {
+  position: relative;
+  width: 45%;
+  padding: 1.5rem;
+  /* border-radius: 20px; */
+  /* background: #fff; */
+  /* box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease; */
+  z-index: 2;
+}
+
+.timeline-content h4 {
+  font-size: 40px;
+}
+
+.timeline-content p {
+  font-size: 20px;
+}
+
+/* .timeline-content:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+        } */
+
+.timeline-content.left {
+  margin-left: auto;
+  margin-right: 5%;
+}
+
+.timeline-content.right {
+  margin-right: auto;
+  margin-left: 5%;
+}
+
+.timeline-image-container {
+  position: relative;
+  width: 45%;
+  padding: 1.5rem;
+  /* border-radius: 20px; */
+  overflow: hidden;
+  /* box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease; */
+  z-index: 2;
+}
+
+/* .timeline-image-container:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+        } */
+
+.timeline-image-container.left {
+  margin-left: auto;
+  margin-right: 5%;
+}
+
+.timeline-image-container.right {
+  margin-right: auto;
+  margin-left: 5%;
+}
+
+.timeline-image {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+  max-width: 300px;
+  display: block;
+  margin: auto;
+}
+
+.timeline-image-container:hover .timeline-image {
+  transform: scale(1.05);
+}
+
+.timeline-icon {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  right: 50%;
+  transform: translateX(50%);
+  border-radius: 50%;
+  background: #f8f9fa;
+  border: 5px solid #e0e0e0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: $green;
+  z-index: 3;
+  transition: all 0.3s ease;
+}
+
+.timeline-step.active .timeline-icon {
+  background: $green;
+  border-color: $orange;
+  color: #fff;
+  box-shadow: 0 0 15px rgba(21, 77, 71, 0.5);
+}
+
+.timeline-step.active + .timeline-step .timeline-icon {
+  border-top-color: $orange;
+}
+
+.timeline-step-number {
+  background: $green;
+  color: white;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  z-index: 4;
+  font-size: 25px;
+  border: 2px solid $orange;
+  margin-bottom: 5px;
+}
+
+/* Progress fill for timeline */
+.timeline-progress {
+  position: absolute;
+  width: 6px;
+  background-color: $green;
+  top: 0;
+  right: 50%;
+  margin-right: -3px;
+  border-radius: 10px;
+  z-index: 1;
+  height: 0;
+  transition: height 0.5s ease;
+  z-index: -1;
+}
+
+/* Button Styling */
+.btn-style {
+  padding: 0.8rem 2rem;
+  font-weight: 500;
+  transition: all 0.3s ease;
+}
+
+.btn-style:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.bg-btn-green {
+  background-color: $green;
+}
+
+/* Mobile Responsive */
+@media (max-width: 991px) {
+  .container {
+    margin: 0;
+    padding: 0;
+  }
+  .timeline::after {
+    right: 31px;
+  }
+
+  .timeline-content-container {
+    flex-direction: column;
+  }
+
+  .timeline-content,
+  .timeline-image-container {
+    width: calc(100% - 60px);
+    margin-right: 30px !important;
+    margin-left: 0 !important;
+  }
+
+  .timeline-icon {
+    right: 31px;
+    transform: translateX(50%);
+  }
+
+  .timeline-step-number {
+    width: 30px;
+    height: 30px;
+    right: 31px;
+    border-width: 1px;
+  }
+
+  .timeline-progress {
+    right: 31px;
+  }
+  .timeline-icon {
+    width: 55px;
+    height: 55px;
+    border-width: 2px;
+    .fa-2x {
+      font-size: 1.5rem;
+    }
+  }
+  .timeline-content h4 {
+    font-size: 30px;
+  }
+  .timeline-image {
+    display: inline;
+  }
+}
